// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Readings {
  id integer [primary key]
  
  timestamp timestamp [not null]
  value float

  sensor integer [ref: > VirtualSensors.id, not null]
}

Table VirtualSensors {
  id integer [primary key]

  category string

  realSensor integer [ref: > RealSensors.id, not null]
  quantity integer [ref: > Quantities.id, not null]
  
  reference string
  sensor string
  URL string
}

Table Quantities {
  id integer [primary key]

  // Reading value info
  quantity string
  symbol string
  unit string
  description string
  safe_level float

  min_threshold float
  max_threshold float
}

Table RealSensors {
  id integer [primary key]
  // Physical Location
  lat float
  lon float
  // elevation float

  // timezone string
  // tz_nick string
  // utc_offset float

  frequency Duration
}

Table Reports {
  id integer [primary key]

  title string
  body string
  trend string

  sensor integer [ref: > VirtualSensors.id, not null]
}

Table Anomalies {
  id integer [primary key]

  reading int [ref: > Readings.id, not null]
  message string
}

// Table Maintainance {
//   id integer [primary key]

// }

Table Users {
  id integer [primary key]

  email string
  username string
  password string

  role int [ref: > Roles.id, not null]
}

Table Roles {
  id integer [primary key]
  type string
}
